// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Registration page Client validation check 1`] = `
<span
  class="css-1reg724"
  role="alert"
>
   
</span>
`;

exports[`Registration page Client validation check 2`] = `
<span
  class="css-1reg724"
  role="alert"
>
  <span
    class="css-sk8pyf"
  >
    Email is invalid
  </span>
</span>
`;

exports[`Registration page Client validation check 3`] = `
<span
  class="css-1reg724"
  role="alert"
>
   
</span>
`;

exports[`Registration page Render check 1`] = `
<div>
  <form>
    <div
      class="css-1u4xp86"
    >
      <section
        class="css-p60l6a"
      >
        <h2
          class="css-1wylx4d"
        >
          Create an account
        </h2>
        <label
          class="css-crjp00"
          height="7"
          width="20"
        >
          <span
            class="css-1grri41"
          >
            username
          </span>
          <div
            class="css-52ovgc"
          >
            <input
              class="css-9em8xk"
              name="username"
              placeholder="username"
            />
          </div>
          <span
            class="css-1reg724"
            role="alert"
          >
             
          </span>
        </label>
        <label
          class="css-crjp00"
          height="7"
          width="20"
        >
          <span
            class="css-1grri41"
          >
            email
          </span>
          <div
            class="css-52ovgc"
          >
            <input
              class="css-9em8xk"
              name="email"
              placeholder="email"
              type="email"
            />
          </div>
          <span
            class="css-1reg724"
            role="alert"
          >
             
          </span>
        </label>
        <label
          class="css-crjp00"
          height="7"
          width="20"
        >
          <span
            class="css-1grri41"
          >
            password
          </span>
          <div
            class="css-52ovgc"
          >
            <input
              class="css-9em8xk"
              name="password"
              placeholder="password"
              role="textbox"
              type="password"
            />
          </div>
          <span
            class="css-1reg724"
            role="alert"
          >
             
          </span>
        </label>
        <button
          class="css-4dagrr"
          color="primary"
          style="margin-top: 1rem;"
          type="submit"
        >
          Sign Up
        </button>
        <h3
          style="margin-top: 3rem;"
        >
          Already have an account?
           
          <a
            class="css-137tmhu"
            href="/login"
          >
            Login
          </a>
        </h3>
      </section>
    </div>
  </form>
</div>
`;
